Fix header at smallest screen size to not be cut off at basic-info but also not be too long

--- a/bin/scss/layout/_header.scss
+++ b/bin/scss/layout/_header.scss
@@ -28,6 +28,7 @@
     background-image: url('http://www.placebeard.it/g/450x350');
     background-repeat: no-repeat;
     width: 100%;
+    height: 200px;
   }
   
   .brand {
